Fix wrapping 2

--- a/src/styles/pages/_blog-page.scss
+++ b/src/styles/pages/_blog-page.scss
@@ -87,8 +87,7 @@ main {
       font-family: Arial, Helvetica, sans-serif;
       &.poem {
         font-family: "Courier New", Courier, monospace;
-        white-space-collapse: preserve-breaks;
-        text-wrap: wrap;
+        white-space: pre-wrap;
         padding-top: 25px;
       }
       a.before.anchor svg {
